--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoSOGomez-Carrillo
 excludes=
+file.reference.json-20180813.jar=src\\libs\\json-20180813.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.json-20180813.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
